Testing User and Supplier